Working on responsive leyout

--- a/WebShop/Areas/Customer/Views/Home/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 @model ProductSupplierCategoryVM
 
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-8" style="min-height: 55vh">
+    <div class="row justify-content-center mt-xl-5">
+        <div class="col-md-8 h-auto">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Carousel Indicators -->
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Categories Section -->
-    <div class="row justify-content-center mt-4">
+    <div class="row justify-content-center mt-xl-5 mt-md-1">
         <div class="col-12 text-center">
             <h3 class="text-dark">Most Popular Categories</h3>
         </div>
