--- a/WebShop/Areas/Customer/Views/Order/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Order/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model OrderViewModel
-
+<div class="container mt-5">
 <table id="orderTable" class="table table-bordered table-striped">
     <thead>
         <tr>
