--- a/WebShop/wwwroot/css/site.css
+++ b/WebShop/wwwroot/css/site.css
@@ -14,7 +14,6 @@ html {
 
 html {
     position: relative;
-    min-height: 100%;
 }
 
 body {
@@ -164,20 +163,27 @@ body {
 }
 
 .cart-counter {
-    position: absolute; /* Position the counter absolutely */
-    bottom: 0; /* Align to the bottom */
-    right: 0; /* Align to the right */
-    background-color: white; /* Background color for visibility */
-    color: red; /* Text color */
+    position: absolute;  Position the counter absolutely 
+    bottom: 0;  Align to the bottom 
+    right: 0;  Align to the right 
+    background-color: white;  Background color for visibility 
+    color: red;  Text color 
     opacity: .6;
-    border-radius: 50%; /* Make it circular */
-    width: 15px; /* Set width */
-    height: 15px; /* Set height */
-    display: flex; /* Flexbox for centering */
-    align-items: center; /* Center vertically */
-    justify-content: center; /* Center horizontally */
-    font-size: 12px; /* Font size */
+    border-radius: 50%;  Make it circular 
+    width: 15px;  Set width 
+    height: 15px;  Set height 
+    display: flex;  Flexbox for centering 
+    align-items: center;  Center vertically 
+    justify-content: center;  Center horizontally 
+    font-size: 12px;  Font size 
     font-weight: 500;
+}
+
+@media (max-width: 999px){
+    #cart-icon{
+        width: 1rem;
+        text-align:center;
+    }
 }
 
 .roboto-thin {
