--- a/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -14,14 +14,14 @@
         </div>
     </div>
     <div class="row mt-2 justify-content-center align-items-center">
-        <div class="col-12 text-center">
+        <div class="col-12 col-md-6 text-center">
             @if(Model.Products is not null)
             {
                 @foreach (var product in Model.Products.CartItems.ToList())
                 {
                     <div class="row mt-4 shadow justify-content-center align-content-center">
                         <div class="col-3">
-                            <img class="card-img-top" src="~/img/@(product.Product.ImgPath)" alt="@product.Product.Name" style="height: 100px;">
+                            <img class="card-img-top" src="~/img/@(product.Product.ImgPath).jpg" alt="@product.Product.Name" style="height: 100px;">
                         </div>
                         <div class="col-2">
                             @product.Product.Name
