DataTables responsive leyout

--- a/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Summary.cshtml
@@ -15,7 +15,7 @@
                         </h5>
                     </div>
                     <div class="col-6 text-end">
-                        <a asp-controller="ShoppingCart" asp-action="Index" class="btn btn-outline-danger btn-sm">Back to Cart</a>
+                        <a asp-controller="ShoppingCart" asp-action="Index" class="btn btn-outline-danger btn-sm bg-dark bg-opacity-50">Back to Cart</a>
                     </div>
                 </div>
             </div>
