--- a/WebShop/Areas/Customer/Views/Order/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Order/Index.cshtml
@@ -1,19 +1,25 @@
 ﻿@model OrderViewModel
 <div class="container mt-5">
-<table id="orderTable" class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Order Date</th>
-            <th>Shipping Date</th>
-            <th>Order Total</th>
-            <th>Order Status</th>
-            <th>Payment Status</th>
-            <th>Payment Date</th>
-        </tr>
-    </thead>
+    <div class="row">
+        <div>
+            <table id="orderTable" class="table table-bordered table-striped display nowrap">
+                <thead>
+                    <tr>
+                        <th class="desktop">Order ID</th>
+                        <th>Order Date</th>
+                        <th>Shipping Date</th>
+                        <th>Order Total</th>
+                        <th>Order Status</th>
+                        <th>Payment Status</th>
+                        <th>Payment Date</th>
+                    </tr>
+                </thead>
 
-</table>
+            </table>
+        </div>
+        
+    </div>
+
 </div>
 
 @section Scripts
