--- a/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row mt-2 justify-content-center align-items-center">
-        <div class="col-12 col-md-6 text-center">
+        <div class="col-12 col-md-10 col-sm-6 text-center">
             @if(Model.Products is not null)
             {
                 @foreach (var product in Model.Products.CartItems.ToList())
@@ -23,19 +23,19 @@
                         <div class="col-3">
                             <img class="card-img-top" src="~/img/@(product.Product.ImgPath).jpg" alt="@product.Product.Name" style="height: 100px;">
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 col-md-1">
                             @product.Product.Name
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 col-md-1">
                             @product.Product.Price @product.Product.Currency
                         </div>
                         <div class="col-1">
                             @product.TotalQuantity
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 col-md-1">
                             @product.TotalAmmount @product.Product.Currency
                         </div>
-                        <div class="col-1">
+                        <div class="col-3">
                             <a class="btn btn-outline-success" asp-area="Customer" asp-controller="ShoppingCart" asp-action="IncrementProductInCart" asp-route-productId="@product.ProductId">+</a>
                             <a class="btn btn-outline-danger" asp-area="Customer" asp-controller="ShoppingCart" asp-action="DecrementProductInCart" asp-route-productId="@product.ProductId">-</a>
                         </div>
