--- a/WebShop/Views/Shared/_LoginPartial.cshtml
+++ b/WebShop/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,11 @@
                     <div class="position-relative">
                         <i class="bi bi-cart"></i>
                         <div class="cart-counter position-absolute top-100 start-100 translate-middle badge rounded-pill bg-opacity-75">
-                            @CartItemCounter
+                            @if(!CartItemCounter.ToString().Equals("0"))
+                            {
+                                @CartItemCounter
+                            }
+
                         </div>
                     </div>
                 </a>
