--- a/WebShop/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/WebShop/Areas/Admin/Views/Product/Upsert.cshtml
@@ -77,7 +77,7 @@
         @if(Model.Product.Id != 0)
         {
             <div class="col-2">
-                <img class="card-img-top" src="~/img/@(Model.Product.ImgPath)" alt="@Model.Product.Name" style="height: 200px;">
+                <img class="card-img-top" src="~/img/@(Model.Product.ImgPath).jpg" alt="@Model.Product.Name" style="height: 200px;">
             </div>
         }
         else
