Admin - OrderList Page Admin - OrderDetailsPage Admin/OrderDetailsPage - adding buttons for Cancel Order By Admin, Shipping Confirmation, Payment Refound, Send Message to User. On Admin OrderList Page - implementation of Cancel order On Order Details Page - implemenetation of Cancel order

--- a/WebShop/Areas/Admin/Views/Order/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Order/Index.cshtml
@@ -6,6 +6,7 @@
                 <thead>
                     <tr>
                         <th class="desktop">Order ID</th>
+                        <th>User ID</th>
                         <th>User mail</th>
                         <th>Order Date</th>
                         <th>Shipping Date</th>
