--- a/WebShop/Areas/Customer/Views/Order/Details.cshtml
+++ b/WebShop/Areas/Customer/Views/Order/Details.cshtml
@@ -1,14 +1,20 @@
 ﻿@model OrderViewModel
 
-@if (string.IsNullOrEmpty(Model.orderHeader.FirstOrDefault().TrackingNumber) && Model.orderHeader.FirstOrDefault().OrderStatus != SD.StatusCancelled) 
+@if (Model.orderHeader.FirstOrDefault().OrderStatus != SD.StatusShipped && Model.orderHeader.FirstOrDefault().OrderStatus != SD.StatusCancelled) 
 {
     <a asp-controller="Order" asp-action="CancelFromDetailsPage" asp-route-id="@Model.orderHeader.FirstOrDefault().Id" class="btn btn-danger">Cancel Order</a>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="You can cancel an order that has not been shipped yet. If you want to cancel the purchase of goods that have been sent to you, please complete the return form and return it together with the product to the address of our warehouse.">
-        <i class="bi bi-info-circle"></i>
-    </button>
-
+        <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="You can cancel an order that has not been shipped yet. If you want to cancel the purchase of goods that have been sent to you, please complete the return form and return it together with the product to the address of our warehouse.">
+            <i class="bi bi-info-circle"></i>
+        </button>
 }
-<div class="container text-center mt-5">
+else
+    {
+        <a asp-controller="Order" asp-action="CancelFromDetailsPage" asp-route-id="@Model.orderHeader.FirstOrDefault().Id" class="btn btn-danger" style="pointer-events: none; background-color:dimgrey; opacity:.50;">Cancel Order</a>
+        <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="You can cancel an order that has not been shipped yet. If you want to cancel the purchase of goods that have been sent to you, please complete the return form and return it together with the product to the address of our warehouse.">
+            <i class="bi bi-info-circle"></i>
+        </button>
+    }
+    <div class="container text-center mt-5">
     <div class="row row-cols-4">
         <div class="col">Order Status: @Model.orderHeader.FirstOrDefault().OrderStatus</div>
         <div class="col">Payment Status: @Model.orderHeader.FirstOrDefault().PaymentStatus</div>
