--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -119,6 +119,14 @@
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
 
+    <script>
+        // Initialize popovers
+        document.querySelectorAll('[data-bs-toggle="popover"]')
+            .forEach(popover => {
+                new bootstrap.Popover(popover)
+            })
+    </script>
+
     <script src="~/js/main.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
