--- a/WebShop/wwwroot/css/site.css
+++ b/WebShop/wwwroot/css/site.css
@@ -162,20 +162,20 @@ body {
     transform: scale(1.5);
 }
 
-.cart-counter {
-    position: absolute;  Position the counter absolutely 
-    bottom: 0;  Align to the bottom 
-    right: 0;  Align to the right 
-    background-color: white;  Background color for visibility 
-    color: red;  Text color 
+.cart-counter, .message-counter {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    color: red;
     opacity: .6;
-    border-radius: 50%;  Make it circular 
-    width: 15px;  Set width 
-    height: 15px;  Set height 
-    display: flex;  Flexbox for centering 
-    align-items: center;  Center vertically 
-    justify-content: center;  Center horizontally 
-    font-size: 12px;  Font size 
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
     font-weight: 500;
 }
 
